@@ -1,12 +1,14 @@
 ---
 name: version
-version: 0.45
+version: 0.46
 author:
   - John Peacock E<lt>jpeacock@cpan.orgE<gt>
 abstract: Perl extension for Version Objects
 license: perl
+requires:
+  perl: '> 5.005, !=5.9.1, !=5.9.2'
 provides:
   version:
     file: lib/version.pm
-    version: 0.45
+    version: 0.46
 generated_by: Module::Build version 0.2701
